// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GuestCheckoutLink /> should render null in case of all other 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(GuestCheckoutLink)>
    <GuestCheckoutLink
      dispatch={[Function]}
      redirect="/"
    />
  </Connect(GuestCheckoutLink)>
</Provider>
`;

exports[`<GuestCheckoutLink /> should render null in case of default login 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(GuestCheckoutLink)>
    <GuestCheckoutLink
      dispatch={[Function]}
      redirect="/more"
    />
  </Connect(GuestCheckoutLink)>
</Provider>
`;

exports[`<GuestCheckoutLink /> should render with one link for login in checkout page 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(GuestCheckoutLink)>
    <GuestCheckoutLink
      dispatch={[Function]}
      redirect="/checkout"
    >
      <div
        className="css-nil"
      >
        <Translate
          className="css-1fzm7bm"
          params={Object {}}
          string="checkout.or"
        >
          <span
            className="css-1fzm7bm"
          >
            checkout.or
          </span>
        </Translate>
        <Link
          className="css-13v1itq"
          disabled={false}
          href="/checkout_guest"
        >
          <div
            aria-hidden={true}
            className="css-c6ki83 css-13v1itq"
            data-test-id="link: /checkout_guest"
            onClick={[Function]}
            role="link"
          >
            <Translate
              className=""
              params={Object {}}
              string="checkout.continue_as_guest"
            >
              <span
                className=""
              >
                checkout.continue_as_guest
              </span>
            </Translate>
            .
          </div>
        </Link>
      </div>
    </GuestCheckoutLink>
  </Connect(GuestCheckoutLink)>
</Provider>
`;
